tools/rpk-automation/gen/23.3/rpk-cloud-byoc.adoc
= rpk cloud byoc
:description: rpk cloud byoc

Manage a Redpanda cloud BYOC agent

For BYOC, Redpanda installs an agent service in your owned cluster. The agent
then proceeds to provision further infrastructure and eventually, a full
Redpanda cluster.

The BYOC command runs Terraform to create and start the agent. You first need
a redpanda-id (or cluster ID); this is used to get the details of how your
agent should be provisioned. You can create a BYOC cluster in our cloud UI
and then come back to this command to complete the process.

== Usage

[,bash]
----
rpk cloud byoc [flags]
  rpk cloud byoc [command]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--client-id |string |The client ID of the organization in Redpanda Cloud.

|--client-secret |string |The client secret of the organization in Redpanda Cloud.

|-h, --help |- |Help for byoc.

|--redpanda-id |string |The redpanda ID of the cluster you are creating.

|--config |string |Redpanda or rpk config file; default search paths are ~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===